example/errors/interpret/comparison_operators_cannot_be_chained.box
println("start");

when 1 < 2 < true < false {
    println("hello world");
}
